fixing html whitespace

--- a/style.css
+++ b/style.css
@@ -124,7 +124,6 @@ section {
 .page-content {
 	margin-top:14px;
 	width:93%;
-	height:100%;
 	margin-left:auto;
 	margin-right:auto;
 	padding:10px; }
